upper footer content alignment issue fixed

--- a/src/app/footer/upper-footer/upper-footer.component.sass
+++ b/src/app/footer/upper-footer/upper-footer.component.sass
@@ -6,12 +6,12 @@
     height: fit-content
     color: #fff
     justify-content: space-around
+    align-items: start
 
     &__table
-        border-collapse: collapse
-        justify-content: center
         display: flex
         flex-direction: column
+        object-fit: contain
 
         thead
             font-size: 0.6rem
